--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="hello_eltex">Привет, Eltex!</string>
+    <string name="not_implemented">Не реализовано</string>
 </resources>
